--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,13 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="usn">USN</string>
+
+    <array name="college_names">
+        <item>NITK Surathkal</item>
+        <item>St. Joseph\'s College of Engineering</item>
+        <item>Canara College of Engineering</item>
+        <item>Srinivas College</item>
+        <item>Sahyadri College of Engineering and Management</item>
+    </array>
 </resources>
